--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ matrix:
     - language: python
       python: 3.6
       install:
-        - pip install pep8
+        - pip install pycodestyle 
         - pip install flake8
       before_script:
-        - "pep8 --exclude=migrations --ignore=E123,E133,E226,E241,E242,E402,E501,W503 ./"
+        - "pycodestyle --exclude=migrations --ignore=E123,E133,E226,E241,E242,E402,E501,W503 ./"
         - "flake8 --exclude=migrations --ignore=E123,E133,E226,E241,E242,E402,E501,W503 ./"
 
     - language: node_js
